validator_derive_tests/tests/compile-fail/must_not_match/unexpected_name_value.stderr
error: unexpected name value validator: "not_a"
 --> $DIR/unexpected_name_value.rs:5:16
  |
5 |     #[validate(not_a = "validator")]
  |                ^^^^^
